--- a/996cloud.conf
+++ b/996cloud.conf
@@ -1,184 +1,150 @@
-    upstream 996hk {
-    	hash $remote_addr consistent;
-    	server 18.183.209.156:15002 max_fails=3 fail_timeout=30s;
-    	server 13.231.189.201:15002 max_fails=3 fail_timeout=30s;
-    }
-    upstream 996sg {
-        hash $remote_addr consistent;
-        server 139.162.21.123:15001 max_fails=3 fail_timeout=30s;
-    }
-    upstream 996jp {
-        hash $remote_addr consistent;
-        server 52.194.223.64:15001 max_fails=3 fail_timeout=30s;
+upstream lionao {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f01:ae86::b4]:10012 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    upstream 996uk {
-        hash $remote_addr consistent;
-        server 143.47.249.213:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996us {
-        hash $remote_addr consistent;
-        server 193.25.215.86:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996de {
-        hash $remote_addr consistent;
-        server 138.2.133.156:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996tw {
-        hash $remote_addr consistent;
-        server hinet1.camdvr.org:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996in {
-        hash $remote_addr consistent;
-        server 13.127.21.83:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996kr {
-        hash $remote_addr consistent;
-        server 150.230.254.120:15002 max_fails=3 fail_timeout=30s;
-    }
-     upstream 996ca {
-        hash $remote_addr consistent;
-        server 132.145.109.63:15002 max_fails=3 fail_timeout=30s;
-    }
-    server {
-        listen              19006;                   
-        server_name fschk.fscloud12345678901.com;
+upstream lionfeilvbin {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f06:1314::1d]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+upstream lionjianpuzhai {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f02:cafe::b5]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_pass        996hk;
-    }
-    server {
-        listen              19006;                   
-        server_name fscsg.fscloud12345678901.com;
+upstream lionmiandian {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f04::a0]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-    	proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        
-        proxy_pass        996sg;
+upstream liontaiguo {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f0d::74]:10012 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    server {
-        listen              19006;                   
-        server_name fscjp.fscloud12345678901.com;
+upstream lionbalin {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f30::25]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
+upstream lionyinni {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f13::63]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_pass        996jp;
+upstream lionyuenan {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f1e::f6]:10012 max_fails=3 fail_timeout=30s;
+}
 
-    }
-    server {
-        listen              19006;                   
-        server_name fscuk.fscloud12345678901.com;
+upstream lionfandigang {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f12::bb]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996uk;
-    }
-    server {
-        listen              19006;                   
-        server_name fscus.fscloud12345678901.com;
+upstream lionagenting {
+    hash $remote_addr consistent;
+    server [2a13:b487:4f16::7b]:10012 max_fails=3 fail_timeout=30s;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996us;
+# 各个区域的服务器配置
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionao.xn--e6q56cu20k.com;
+    proxy_pass lionao;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              19006;                   
-        server_name fscde.fscloud12345678901.com;
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionfeilvbin.xn--e6q56cu20k.com;
+    proxy_pass lionfeilvbin;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionjianpuzhai.xn--e6q56cu20k.com;
+    proxy_pass lionjianpuzhai;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996de;
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionmiandian.xn--e6q56cu20k.com;
+    proxy_pass lionmiandian;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              19006;                   
-        server_name fscca.fscloud12345678901.com;
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name liontaiguo.xn--e6q56cu20k.com;
+    proxy_pass liontaiguo;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionbalin.xn--e6q56cu20k.com;
+    proxy_pass lionbalin;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996ca;
+server {
+    listen 443 ssl;   
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionyinni.xn--e6q56cu20k.com;
+    proxy_pass lionyinni;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-    }
-    server {
-        listen              19006;                   
-        server_name fscin.fscloud12345678901.com;
+server {
+    listen 443 ssl;  
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionyuenan.xn--e6q56cu20k.com;
+    proxy_pass lionyuenan;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionfandigang.xn--e6q56cu20k.com;
+    proxy_pass lionfandigang;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
 
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996in;
-
-    }
-    server {
-        listen              19006;                   
-        server_name fsctw.fscloud12345678901.com;
-
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996tw;
-    }
-    server {
-        listen             19006;                   
-        server_name fsckr.fscloud12345678901.com;
-        proxy_connect_timeout 5s;  # 与被代理服务器建立连接的超时时间为5s
-        proxy_timeout 20s;   # 获取被代理服务器的响应最大超时时间为20s
-
-        proxy_next_upstream on;  # 当被代理的服务器返回错误或超时时，将未返回响应的客户端连接请求传递给upstream中的下一个服务器
-        proxy_next_upstream_tries 3;   # 转发尝试请求最多3次
-        proxy_next_upstream_timeout 10s;    # 总尝试超时时间为10s
-        proxy_socket_keepalive on;  # 开启SO_KEEPALIVE选项进行心跳检测
-        proxy_protocol    on;
-        proxy_pass        996kr;
-
-    }
+server {
+    listen 443 ssl; 
+    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256';
+    ssl_prefer_server_ciphers on;  # 优先使用服务器端配置的加密套件
+    server_name lionagenting.xn--e6q56cu20k.com;
+    proxy_pass lionagenting;
+    include /usr/local/nginx/mytcp/ssl_common.conf;
+    include /usr/local/nginx/mytcp/proxy_common.conf;
+}
